k8s/qa/app-frontend-svc-qa.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app-frontend
  name: app-frontend-svc-qa
  namespace: qa
spec:
  ports:
  - nodePort: 32655
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: app-frontend
  type: LoadBalancer
status:
  loadBalancer: {}
