k8s/qa/app-frontend-ingress-qa.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-frontend-ingress
  namespace: qa
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: qa.encadeado.com
    http:
      paths:
      - path: /
        backend:
          serviceName: app-frontend-svc-qa
          servicePort: 3000
